--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 
 <body>
     <div class="site-wrapper">
-        
+        @@include('page/header.html')
         <!-- @@include('page/head.html') -->
     </div>
     <script src="./js/main.min.js"></script>
